--- a/truckMileageTracker/en.lproj/MainStoryboard.storyboard
+++ b/truckMileageTracker/en.lproj/MainStoryboard.storyboard
@@ -12,10 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="27t-E7-D36">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="216" id="2XF-1A-o3m"/>
-                                </constraints>
+                            <pickerView tag="1" contentMode="scaleToFill" restorationIdentifier="" translatesAutoresizingMaskIntoConstraints="NO" id="27t-E7-D36" userLabel="StatePicker">
                                 <connections>
                                     <outlet property="dataSource" destination="2" id="86z-aj-tX0"/>
                                     <outlet property="delegate" destination="2" id="iy5-7l-lAa"/>
@@ -23,7 +20,7 @@
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onS-Pp-HqM">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Next ->">
+                                <state key="normal" title="Choose State">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -34,33 +31,43 @@
                                     <action selector="buttonPressed:" destination="2" eventType="touchUpInside" id="Ac4-eC-KTK"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="State Chose:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uf1-wj-zNh">
+                            <pickerView hidden="YES" tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UhO-td-YDR" userLabel="MileagePicker">
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="f17-N0-dbD"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="2" id="bh3-zY-nn8"/>
+                                    <outlet property="delegate" destination="2" id="ntj-QH-wa9"/>
+                                </connections>
+                            </pickerView>
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Chosen State" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INz-8U-8xo">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="MN" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fuo-g3-iyZ">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Fuo-g3-iyZ" firstAttribute="baseline" secondItem="Uf1-wj-zNh" secondAttribute="baseline" type="default" id="0gG-tQ-b1k"/>
-                            <constraint firstItem="27t-E7-D36" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="MP6-YE-3CD"/>
-                            <constraint firstItem="27t-E7-D36" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="Np0-Pl-HKm"/>
-                            <constraint firstAttribute="bottom" secondItem="onS-Pp-HqM" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Ox9-G1-9Sq"/>
-                            <constraint firstAttribute="bottom" secondItem="Uf1-wj-zNh" secondAttribute="bottom" constant="77" id="TnJ-id-jUP"/>
-                            <constraint firstItem="Uf1-wj-zNh" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="cLb-5D-5Hp"/>
-                            <constraint firstItem="27t-E7-D36" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="ihY-L9-pce"/>
-                            <constraint firstItem="Fuo-g3-iyZ" firstAttribute="leading" secondItem="Uf1-wj-zNh" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="tYH-qL-IvU"/>
-                            <constraint firstItem="onS-Pp-HqM" firstAttribute="centerX" secondItem="27t-E7-D36" secondAttribute="centerX" type="default" id="wEv-99-8tq"/>
+                            <constraint firstItem="UhO-td-YDR" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="0y0-bx-Pbt"/>
+                            <constraint firstItem="27t-E7-D36" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="2PW-nQ-dUw"/>
+                            <constraint firstItem="UhO-td-YDR" firstAttribute="bottom" secondItem="27t-E7-D36" secondAttribute="bottom" type="default" id="BBH-wN-K3F"/>
+                            <constraint firstAttribute="bottom" secondItem="onS-Pp-HqM" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="ITL-np-cua"/>
+                            <constraint firstItem="27t-E7-D36" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="LBV-qz-Fmz"/>
+                            <constraint firstItem="onS-Pp-HqM" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="UYj-6V-DH3"/>
+                            <constraint firstItem="27t-E7-D36" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="VkJ-dM-l34"/>
+                            <constraint firstItem="UhO-td-YDR" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="Z1K-6h-ejT"/>
+                            <constraint firstAttribute="trailing" secondItem="onS-Pp-HqM" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="lU1-B7-JVg"/>
+                            <constraint firstItem="UhO-td-YDR" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="ui9-yi-aqR"/>
+                            <constraint firstAttribute="bottom" secondItem="INz-8U-8xo" secondAttribute="bottom" constant="91" id="viE-k7-TBl"/>
+                            <constraint firstItem="onS-Pp-HqM" firstAttribute="centerX" secondItem="INz-8U-8xo" secondAttribute="centerX" type="default" id="wd5-3x-oQm"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="7"/>
                     <connections>
-                        <outlet property="stateChosen" destination="Fuo-g3-iyZ" id="MPv-vQ-Vbl"/>
+                        <outlet property="mileagePicker" destination="UhO-td-YDR" id="gSK-l2-GvG"/>
+                        <outlet property="selectButton" destination="onS-Pp-HqM" id="sMF-1X-HNG"/>
+                        <outlet property="stateLabel" destination="INz-8U-8xo" id="vGU-7q-heA"/>
                         <outlet property="statePicker" destination="27t-E7-D36" id="wm7-k6-k1s"/>
                     </connections>
                 </viewController>
@@ -84,7 +91,7 @@
                             </label>
                             <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" bouncesZoom="NO" editable="NO" text="Loaded by the second view controller — an instance of trackerSecondViewController — specified in the app delegate." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="23">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="88" id="cQR-IW-sY8"/>
+                                    <constraint firstAttribute="height" constant="88" id="NeT-p0-Zgg"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" size="system"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -92,12 +99,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="22" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="0q6-IA-e8m"/>
-                            <constraint firstAttribute="trailing" secondItem="23" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fR4-wH-Ih7"/>
-                            <constraint firstItem="23" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fzb-YA-SeR"/>
-                            <constraint firstAttribute="centerY" secondItem="23" secondAttribute="centerY" type="user" id="llH-eD-iPS"/>
-                            <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="pc3-9Y-W42"/>
-                            <constraint firstItem="23" firstAttribute="top" secondItem="22" secondAttribute="bottom" constant="40" type="user" id="yUx-Ee-KEk"/>
+                            <constraint firstAttribute="trailing" secondItem="23" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="XFX-xj-dfV"/>
+                            <constraint firstItem="22" firstAttribute="top" secondItem="17" secondAttribute="top" constant="123" id="ksi-5P-zLL"/>
+                            <constraint firstItem="22" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="pcB-MU-FnV"/>
+                            <constraint firstItem="23" firstAttribute="top" secondItem="17" secondAttribute="top" constant="206" id="pyq-mM-6Cl"/>
+                            <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="uc7-qR-WQI"/>
+                            <constraint firstItem="23" firstAttribute="leading" secondItem="17" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="xzh-KX-Wbl"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="6"/>
@@ -138,7 +145,9 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/trackerFirstViewController.h"/>
             <relationships>
                 <relationship kind="action" name="buttonPressed:"/>
-                <relationship kind="outlet" name="stateChosen" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mileagePicker" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="selectButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="stateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="statePicker" candidateClass="UIPickerView"/>
             </relationships>
         </class>
